# gtserver-argocd

./: .gcloudignore  .gitignore  Home.py  README.md  app.yaml  cloudbuild.yaml  deployment.yaml  deployment.yaml.tpl  gtcluster-deployment-secretV1.yml  gtclusterV1.sh  gtclusterV2.sh  ingress.yml  pyproject.toml  service.yaml
.devcontainer/: devcontainer.json
apps/genotracker/: Dockerfile  README.md  app.py  deployment.yaml  requirements.txt  utils.py
apps/gke-manager/: Dockerfile  api_req.py  app.py  requirements.txt
apps/gp2-browser/: .gcloudignore  .gitignore  Dockerfile  Home.py  README.md  requirements.txt
deployments/: README.md
deployments/gke-setup/: cluster-setup.sh  cluster-teardown.sh  nodepool-setup.sh  nodepool-teardown.sh
deployments/helm-charts/: dep-packages.sh
microservices/carriers_api/: .gcloudignore  .gitignore  Dockerfile  README.md  main.py  requirements.txt  run_carriers.py  run_carriers_api.py
microservices/genotools-api/: .gitignore  README.md  api_reqV2.py  pyproject.toml
microservices/genotools_api/: .dockerignore  .gcloudignore  Dockerfile  api_reqV2.py  gtcluster-deployment-secret.yml  requirements.txt
microservices/genotracker/: README.md  api.py  deployment.yaml  main.py  requirements.txt  svc.yaml  utils.py
microservices/gt-precheck/: -Dockerfile  Dockerfile  README.md  api_test.py  app.py  pyproject.toml  requirements.txt
microservices/idat_utils/: README.md  requirements.txt
pages/: 01_🧬_GP2_Release.py  05_🧬_Rare_Variants.py
prototype/: app.yaml
utils/: ancestry_utils.py  hold_data.py  quality_control_utils.py
(+110 files in other folders)
