[tool.poetry]
name = "genotools-api"
version = "0.1.0"
description = ""
authors = ["dvitale199 <d.vitale199@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
the-real-genotools = "^1.2.4"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
google-cloud-secret-manager = "^2.21.1"
numpy = "1.24.4"
pandas = "2.0.3"
scikit-learn = "1.3.0"
joblib = "1.3.1"
numba = "0.57.1"
umap-learn = "0.5.3"
xgboost = "1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
